--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+    rel="stylesheet"
+  />
     <style>
         * {
             box-sizing: border-box;
+            font-family: 'press Start 2P', cursive;
         }
     </style>
 </head>
 
-
 <body>
-    <!-- Red Container Div-->
+    <!-- Div do container vermelho -->
     <div style="position: relative; display: inline-block;">
         <!-- Smaller red container-->
         <div style="
@@ -19,12 +25,16 @@
             padding: 20px;">
 
             <!--Player Health -->
-            <div style="position: relative; height:30px; width: 100%; display: flex; justify-content: flex-end;">
-                <div  style="background-color: yellow; height: 30px; width: 100%;"></div>
+            <div style="position: relative;
+             height:30px;
+              width: 100%;
+               display: flex;
+               justify-content: flex-end;">
+                <div  style="background-color: red; height: 30px; width: 100%;"></div>
                 <div id="playerHealth" 
                     style="
                     position: absolute; 
-                    background: blue; 
+                    background: #818cf8; 
                     top: 0; 
                     right: 0; 
                     bottom: 0; 
@@ -36,22 +46,30 @@
             <div 
             id="timer"
             style="
-            background-color: red; 
+            background-color: black; 
             height:100px; 
-            width: 100px; 
+            width: 50px; 
             flex-shrink: 0;
             display: flex;
             align-items: center;
-            justify-content: center ;">
+            justify-content: center ;
+            color: white;
+            border: 4px solid white;">
             10
             </div>
 
             <!--Enemy Health -->
-            <div style="position: relative; height:30px; width: 100%;">
-                <div  style="background-color: yellow; height: 30px;"></div>
+            <div style="
+                        position: relative;
+                        height:30px;
+                        width: 100%;
+                        border-top: 1px solid white;
+                        border-bottom: 1px solid white ;">
+                        
+                <div  style="background-color: red; height: 30px;"></div>
                 <div id="enemyHealth" 
                     style="position: absolute; 
-                    background: blue; 
+                    background: #818cf8; 
                     top: 0; 
                     right: 0; 
                     bottom: 0; 
@@ -75,7 +93,11 @@
 
         <canvas></canvas>
     </div>
-
+    <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
+    integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"></script>
 
     <script src="js/utilities.js" ></script>
     <script src="js/classes.js" ></script>
