--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
     rel="stylesheet"
   />
+    <link rel="stylesheet" href="style.css">
     <style>
         * {
             box-sizing: border-box;
@@ -14,91 +15,52 @@
 </head>
 
 <body>
-    <!-- Div do container vermelho -->
-    <div style="position: relative; display: inline-block;">
-        <!-- Smaller red container-->
-        <div style="
-            position: absolute;
-            display: flex; 
-            width: 100%; 
-            align-items: center;
-            padding: 20px;">
+    <section class="game__screen">
+            <!-- Div do container vermelho -->
+            <div class="container-background" >
 
-            <!--Player Health -->
-            <div style="position: relative;
-             height:30px;
-              width: 100%;
-               display: flex;
-               justify-content: flex-end;">
-                <div  style="background-color: red; height: 30px; width: 100%;"></div>
-                <div id="playerHealth" 
-                    style="
-                    position: absolute; 
-                    background: #818cf8; 
-                    top: 0; 
-                    right: 0; 
-                    bottom: 0; 
-                    width: 100%;"
-                    ></div>
+
+                <!-- Area da barra de saude e timer-->
+                <div class="health_timer_area">
+
+                    <!--Caixa de fundo da barra de energia do jogador -->
+                    <div class="player_health_background">
+                        <!--Barra vermelha de saude do jogador-->
+                        <div class="player_red_blood_bar"></div>
+                        <!--Barra roxa de saude do jogador-->
+                        <div id="playerHealth"></div>
+                    </div>
+
+
+                    <!--Timer -->
+                    <div id="timer"> 00 </div>
+
+
+
+                    <!--Caixa de fundo da barra de energia do inimigo -->
+                    <div  class="enemy_health_background">
+                        <!--Barra vermelha de saude do inimigo-->
+                        <div class="enemy_red_blood_bar"></div>
+                        <!--Barra roxa de saude do inimigo-->
+                        <div id="enemyHealth"></div>
+                    </div>
+                    <div ></div>
+
+
+                </div>
+                <!-- Texto de informações da tela -->
+                <div id="displayText">Tie</div>
+
+                <canvas></canvas>
             </div>
+            <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
+            integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"></script>
 
-            <!--Timer -->
-            <div 
-            id="timer"
-            style="
-            background-color: black; 
-            height:100px; 
-            width: 50px; 
-            flex-shrink: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center ;
-            color: white;
-            border: 4px solid white;">
-            10
-            </div>
-
-            <!--Enemy Health -->
-            <div style="
-                        position: relative;
-                        height:30px;
-                        width: 100%;
-                        border-top: 1px solid white;
-                        border-bottom: 1px solid white ;">
-                        
-                <div  style="background-color: red; height: 30px;"></div>
-                <div id="enemyHealth" 
-                    style="position: absolute; 
-                    background: #818cf8; 
-                    top: 0; 
-                    right: 0; 
-                    bottom: 0; 
-                    left: 0;"
-                    ></div>
-            </div>
-            <div ></div>
-        </div>
-        <div id="displayText" 
-        style="
-        position: absolute; 
-        color: white;  
-        align-items: center; 
-        justify-content: center;
-        top: 0; 
-        right: 0; 
-        bottom: 0; 
-        left: 0;
-        display: none;"
-        >Tie</div>
-
-        <canvas></canvas>
-    </div>
-    <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
-    integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"></script>
-
+    </section>
+    
     <script src="js/utilities.js" ></script>
     <script src="js/classes.js" ></script>
     <script src="index.js" ></script>
